fixed spacing problem

--- a/sass/MindMap.sass
+++ b/sass/MindMap.sass
@@ -27,7 +27,7 @@ $shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px
   a
     color: $grey100
     font-family: 'Raleway'
-    font-size: 20px
+    font-size: 16px
     padding: 0 5px
 
 .mindmap-subnode-connection
